--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ Released   : 20131117
 			<div class="title">
 			</div>
 			<h4><p>Welcome!</p></h4>
-			<h2><p>I am a PhD Candidate at the University at Albany, SUNY.</p></h2>
-			<h2><p>My research focus on precipitation characteristics in observations and climate models.</p></h2>
-			<h2><p>Climate variability and change, climate modeling and data analysis are my main research interests.</p></h2>
+			<h2><p>I am currently a postdoctoral scholar working at UCLA.</p></h2>
+			<h2><p>My current research is primarily focused on understanding hydrologic extremes and their future changes.</p></h2>
+			<h2><p>I specilize in working with large datasets, using statstical and machine learning techniques to understand import issues in climate sciences.</p></h2>  
 		</div>				
 	</div>
 </div>
