--- a/Aboutme.html
+++ b/Aboutme.html
@@ -45,13 +45,9 @@ Released   : 20131117
 			<div class="title">
 			</div>
 			<h4><p>About Di</p></h4>
-			<h3><p>I am a PhD Candidate and fifth-year graduate student at the University at Albany, SUNY
-
+			<h3><p>I am a currently working at UCLA as a postdoctral scholar
 .</p></h3>
-			<h3><p>My current research focus on understanding precipitation characteristics in observations and global climate models (GCMs), and how horizotal resolutions affect precipitation, under the advisement of 
-				<a href="http://www.atmos.albany.edu/facstaff/adai/" target="_blank" rel="nofollow">Dr. Aiguo Dai.</a>
-			</p></h3>
-			<h3><p>I graduated with a B.S. in Atmospheric Science from Ocean University of China in June 2014.</p></h3>
+			<h3><p>I received my Ph.D. in Atmospheric Science from University at Albany, SUNY, in August, 2019.</p></h3>
 			<h3><p>For Leisure, I enjoy playing classical guitar, exercising and visiting museums.</p></h3>
 		</div>		
 		<div class="column2">
