--- a/R2.html
+++ b/R2.html
@@ -41,7 +41,7 @@ Released   : 20131117
 		</div>
 	</div>
 	<div id="page" class="container4">
-	<h9><p>This work is currently in preparation for publication, please stay tuned! Below are a few selected figures:</p></h9>
+	<h9><p>This work has been published in Journal of Advances in Modeling Earth Systems. <a href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2018MS001536" target="_blank" rel="nofollow">Check it out!</a></p></h9>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box}
