--- a/Research.html
+++ b/Research.html
@@ -56,7 +56,7 @@ Released   : 20131117
 			<div class="title">
 			</div>
 			<h5><p>Precipitation Characteristics and their Resolution Dependence in the Conmmunity Atmosphere Model <a href="http://www.cesm.ucar.edu/models/cesm1.2/" target="_blank" rel="nofollow">(CAM)</a></p></h5>
-			<a href="R2.html" class="button2">Preview</a>
+			<a href="R2.html" class="button2">Learn More</a>
 		</div>
 		<div class="column4">
 			<div class="title">
@@ -67,7 +67,7 @@ Released   : 20131117
 			<div class="title">
 			</div>
 			<h5><p>Precipitation Characteristics Simulated in <a href="https://esgf-node.llnl.gov/projects/cmip5/" target="_blank" rel="nofollow">CMIP5</a> Models </p></h5>
-			<a href="R3.html" class="button2">Preview</a>
+			<a href="R3.html" class="button2">Learn More</a>
 		</div>
 		<div class="column8">
 			<div class="title">
