--- a/Contact.html
+++ b/Contact.html
@@ -46,16 +46,16 @@ Released   : 20131117
 			<div class="title">
 			</div>
 			<img src="images/school.png" width="68" height="68" alt="" class="center2"/>
-			<h7><p><a href="https://www.albany.edu/atmos/indexmain.php" target="_blank" rel="nofollow">Department of Atmospheric and Environmental Sciences</a></p></h7>
-			<h7><p>University at Albany, SUNY</p></h7>
-			<h7><p>1400 Washington Avenue</p></h7>
-			<h7><p>Albany, NY 12222</p></h7>
+			<h7><p><a href="https://dept.atmos.ucla.edu/alexhall" target="_blank" rel="nofollow">Department of Atmospheric and Oceanic Sciences</a></p></h7>
+			<h7><p>UCLA</p></h7>
+			<h7><p>520 Portola Plaza</p></h7>
+			<h7><p>Los Angeles, CA 90095</p></h7>
 		</div>				
 		<div class="column2">
 			<div class="title">
 			</div>
 			<img src="images/PS.png" width="68" height="68" alt="" class="center2"/>
-			<h5><p>dchen5@albany.edu</p></h5>
+			<h5><p>dichen@atmos.ucla.edu</p></h5>
 			<span>
  				<a href="https://scholar.google.com/citations?hl=en&user=s9OnuRMAAAAJ" target="_blank">
  				 <img src="images/gs.png" width="68" alt="" class="center"/>
