--- a/Aboutme.html
+++ b/Aboutme.html
@@ -45,10 +45,10 @@ Released   : 20131117
 			<div class="title">
 			</div>
 			<h4><p>About Di</p></h4>
-			<h8><p>I am a currently working at UCLA as a postdoctral scholar
-.</p></h8>
-			<h8><p>I received my Ph.D. in Atmospheric Science from University at Albany, SUNY, in August, 2019.</p></h8>
-			<h8><p>For Leisure, I enjoy playing classical guitar, exercising and visiting museums.</p></h8>
+			<h2><p>I am a currently working at UCLA as a postdoctral scholar
+.</p></h2>
+			<h2><p>I received my Ph.D. in Atmospheric Science from University at Albany, SUNY, in August, 2019.</p></h2>
+			<h2><p>Growing up in the "Spring City" in southwest China, I enjoy walking and biking in nature. During my leisure time, I also love to play classical guitar, swim, and visit museums.</p></h2>
 		</div>		
 		<div class="column2">
 			<div class="title">
