--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Released   : 20131117
 			<h4><p>Welcome!</p></h4>
 			<h2><p>I am currently a postdoctoral scholar working at UCLA.</p></h2>
 			<h2><p>My current research is primarily focused on understanding hydrologic extremes and their future changes.</p></h2>
-			<h2><p>I specilize in working with large datasets, using statstical and machine learning techniques to understand import issues in climate sciences.</p></h2>  
+			<h2><p>I work with large datasets, I utilize statistical and machine learning techniques, and I like to communicate research to scientific/non-scientific audience.</p></h2>  
 		</div>				
 	</div>
 </div>
