--- a/Aboutme.html
+++ b/Aboutme.html
@@ -45,7 +45,7 @@ Released   : 20131117
 			<div class="title">
 			</div>
 			<h4><p>About Di</p></h4>
-			<h2><p>I am currently working at UCLA as a postdoctral scholar
+			<h2><p>I am currently working at UCLA as a postdoctoral scholar
 .</p></h2>
 			<h2><p>I received my Ph.D. in Atmospheric Science from University at Albany, SUNY, in August, 2019.</p></h2>
 			<h2><p>Growing up in the "Spring City" in southwest China, I enjoy walking and biking in nature. During my leisure time, I also love to play classical guitar, swim, and visit museums.</p></h2>
